--- a/pricing.html
+++ b/pricing.html
@@ -143,7 +143,7 @@
 <ul>
   <li><span class="dot"></span><span>Everything in Remote-First, plus proactive system oversight.</span></li>
   <li><span class="dot"></span><span>Ongoing monitoring, maintenance, and check-ins to help prevent issues before they disrupt work.</span></li>
-  <li><span class="dot"></span><span><strong>1 hour</strong> of onsite service included each month, with rollover up to <strong>3 hours.</strong><em> (Equivalent to <strong>$65/hr</strong> of onsite labor; additional onsite billed at standard rates.)</em></span></li>  
+  <li><span class="dot"></span><span><strong>1 hour</strong> of onsite service credit included each month, with rollover up to <strong>3 hours.</strong><em> (Equivalent to <strong>$65/hr</strong> of onsite labor; additional onsite billed at standard rates.)</em></span></li>  
   <li><span class="dot"></span><span>Additional onsite billed at <strong>$65/hr</strong>; after-hours onsite at <strong>1.5×</strong>.</span></li>
   <li><span class="dot"></span><span>Highest scheduling priority for onsite and time-sensitive work.</span></li>
 </ul>
@@ -159,8 +159,8 @@
       <details open>
         <summary>Onsite Credit Terms (Managed Services Plan)</summary>
         <ul>
-          <li><span class="dot"></span><span><strong>Monthly credit:</strong> $65 onsite service credit added each billing cycle while enrolled in Hybrid. Applied to onsite labor only.</span></li>
-          <li><span class="dot"></span><span><strong>Rollover:</strong> Unused credits roll for up to 3 consecutive months; the oldest credit expires as a new month is added. <em>Maximum balance $195.</em></span></li>
+          <li><span class="dot"></span><span><strong>Monthly credit:</strong> 1 Hour ($65) onsite service credit added each billing cycle while enrolled in Managed Services Plan. Applied to onsite labor only.</span></li>
+          <li><span class="dot"></span><span><strong>Rollover:</strong> Unused credits roll for up to 3 consecutive months; the oldest credit expires as a new month is added. <em>Maximum balance 3 Hours ($195).</em></span></li>
           <li><span class="dot"></span><span><strong>Limits:</strong> Not redeemable for cash, non‑transferable, and not applicable to projects, parts, or third‑party fees.</span></li>
           <li><span class="dot"></span><span><strong>Travel:</strong> First 35 miles included per visit; beyond that billed at $1/mile.</span></li>
         </ul>
@@ -185,3 +185,4 @@
   </main>
 </body>
 </html>
+
