--- a/pricing.html
+++ b/pricing.html
@@ -157,7 +157,7 @@
     <!-- Credit notes -->
     <section id="hybrid-notes" style="margin-top:14px" class="card">
       <details open>
-        <summary>Onsite Credit Terms (Managed Services Plan)</summary>
+        <summary>Onsite Service Time Details (Managed Services)</summary>
         <ul>
           <li><span class="dot"></span><span><strong>Monthly credit:</strong> 1 Hour ($65) onsite service credit added each billing cycle while enrolled in Managed Services Plan. Applied to onsite labor only.</span></li>
           <li><span class="dot"></span><span><strong>Rollover:</strong> Unused credits roll for up to 3 consecutive months; the oldest credit expires as a new month is added. <em>Maximum balance 3 Hours ($195).</em></span></li>
@@ -185,4 +185,5 @@
   </main>
 </body>
 </html>
+
 
