--- a/managedplan.html
+++ b/managedplan.html
@@ -136,7 +136,7 @@
           <div>
             <div class="price">$125 <span class="unit">/ managed device / month</span></div>
             <p class="kicker">
-              Includes proactive oversight + priority support + <strong>$65 monthly onsite service time</strong> to make hands-on help easier to plan.
+              Includes proactive oversight + priority support + <strong>1 Hour monthly onsite service time</strong> to make hands-on help easier to plan.
             </p>
 
             <div class="cta">
