--- a/managedplan.html
+++ b/managedplan.html
@@ -229,8 +229,8 @@
           <details style="margin-top:14px" open>
             <summary>Onsite service time terms</summary>
             <ul>
-              <li><span class="dot"></span><span><strong>Monthly included time:</strong> $65 onsite labor value added each billing cycle while enrolled.</span></li>
-              <li><span class="dot"></span><span><strong>Rollover:</strong> unused value rolls for up to 3 months; max bank $195.</span></li>
+              <li><span class="dot"></span><span><strong>Monthly included time:</strong> 1 Hour onsite labor ($65) added each billing cycle while enrolled.</span></li>
+              <li><span class="dot"></span><span><strong>Rollover:</strong> unused value rolls for up to 3 months; max bank 3 Hours ($195).</span></li>
               <li><span class="dot"></span><span><strong>Use:</strong> applies to onsite labor only (not parts, third-party services, or project work).</span></li>
               <li><span class="dot"></span><span><strong>Additional onsite:</strong> $65/hr (1-hr minimum); after-hours onsite 1.5×.</span></li>
               <li><span class="dot"></span><span><strong>Travel:</strong> first 35 miles included per visit; beyond that billed at $1/mile.</span></li>
