--- a/managedplan.html
+++ b/managedplan.html
@@ -22,16 +22,20 @@
       --radius-lg:28px;
     }
     *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0;
-      background:
-        radial-gradient(1200px 800px at 80% -10%, rgba(14,165,255,.15), transparent 60%),
-        radial-gradient(900px 600px at 10% 110%, rgba(56,189,248,.12), transparent 50%),
-        var(--bg);
-      color:var(--ink);
-      font: 16px/1.6 ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Helvetica Neue, Arial, "Apple Color Emoji","Segoe UI Emoji";
-    }
+html{min-height:100%;
+  background:
+    radial-gradient(1200px 800px at 80% -10%, rgba(14,165,255,.15), transparent 60%),
+    radial-gradient(900px 600px at 10% 110%, rgba(56,189,248,.12), transparent 50%),
+    var(--bg);
+  background-attachment: fixed;
+}
+body{
+  margin:0;
+  min-height:100%;
+  background:transparent;
+  color:var(--ink);
+  font:16px/1.6 ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Helvetica Neue, Arial, "Apple Color Emoji","Segoe UI Emoji";
+}
     a{color:var(--brand); text-decoration:none}
     a:hover{color:var(--brand-2)}
     .wrap{max-width:1100px; margin:0 auto; padding:28px 18px 80px}
