--- a/index.html
+++ b/index.html
@@ -147,8 +147,9 @@
           doesn’t annoy your users.
         </p>
         <div class="cta">
-          <a class="btn btn-primary" href="mailto:joe@kaztech99.com?subject=KazTech%20help" aria-label="Email Joe at KazTech">Email Joe</a>
           <a class="btn btn-ghost" href="#services">See services</a>
+          <a class="btn btn-primary" href="mailto:joe@kaztech99.com?subject=KazTech%20help" aria-label="Email Joe at KazTech">Email Joe</a>
+          <a class="btn btn-primary" href="/pricing.html">See Plans & Pricing</a>
         </div>
       </div>
       <div>
