--- a/pricing.html
+++ b/pricing.html
@@ -176,7 +176,7 @@ footer{margin:26px 0 6px; color:var(--muted); font-size:.9rem}
 </ul>
         <div class="cta">
           <a class="btn" href="/managedplan.html">More Info</a>
-          <a class="btn alt" href="#hybrid-notes">How the credit works</a>
+          <a class="btn alt" href="#hybrid-notes">How the onsite credit works</a>
         </div>
       </article>
     </div>
