--- a/pricing.html
+++ b/pricing.html
@@ -186,7 +186,7 @@ footer{margin:26px 0 6px; color:var(--muted); font-size:.9rem}
       <details open>
         <summary>Onsite Service Time Details (Managed Services)</summary>
         <ul>
-          <li><span class="dot"></span><span><strong>Monthly credit:</strong> 1 Hour ($65) onsite service credit added each billing cycle while enrolled in Managed Services Plan. Applied to onsite labor only.</span></li>
+          <li><span class="dot"></span><span><strong>Monthly credit:</strong> 1 Hour onsite service credit added each billing cycle while enrolled in Managed Services Plan. Applied to onsite labor only. <em>$65 value.</em></span></li>
           <li><span class="dot"></span><span><strong>Rollover:</strong> Unused credits roll for up to 3 consecutive months; the oldest credit expires as a new month is added. <em>Maximum balance 3 Hours ($195).</em></span></li>
           <li><span class="dot"></span><span><strong>Limits:</strong> Not redeemable for cash, non‑transferable, and not applicable to projects, parts, or third‑party fees.</span></li>
           <li><span class="dot"></span><span><strong>Travel:</strong> First 35 miles included per visit; beyond that billed at $1/mile.</span></li>
