--- a/managedplan.html
+++ b/managedplan.html
@@ -223,7 +223,7 @@ body{
         <section class="card">
           <span class="badge">What you can expect</span>
           <ul>
-            <li><span class="dot"></span><span><strong>One point of contact:</strong> you’ll work directly with the same person who knows your setup.</span></li>
+            <li><span class="dot"></span><span><strong>No hand-offs:</strong> issues are handled with full context, without repeating yourself or starting from scratch.</span></li>
             <li><span class="dot"></span><span><strong>Clear communication:</strong> what’s happening, what’s recommended, and why.</span></li>
             <li><span class="dot"></span><span><strong>Less downtime:</strong> small issues get addressed before they become big ones.</span></li>
             <li><span class="dot"></span><span><strong>Predictable billing:</strong> stable monthly cost for managed devices.</span></li>
