--- a/pricing.html
+++ b/pricing.html
@@ -130,8 +130,8 @@ footer{margin:26px 0 6px; color:var(--muted); font-size:.9rem}
       <ul>
         <li><span class="dot"></span><span>Phone, email, remote assistance and onsite support when you need it.</span></li>
         <li><span class="dot"></span><span>After‑hours & weekends billed at <strong>1.5×</strong> the standard rate.</span></li>
-        <li><span class="dot"></span><span>Onsite visits have a one-hour minimum.</span></li>
-        <li><span class="dot"></span><span>Onsite travel includes the first 15 miles round-trip; additional distance is billed at <strong>$1.25/mile</strong>.</span></li>
+        <li><span class="dot"></span><span>Onsite visits include a $95 dispatch fee plus a one-hour minimum at the standard hourly rate.</span></li>
+        <li><span class="dot"></span><span>Onsite travel includes the first 15 miles round-trip per visit; additional distance billed at <strong>$1.25/mile</strong>.</span></li>
         <li><span class="dot"></span><span>Projects, migrations, and extended onsite quoted separately.</span></li>
         <li><span class="dot"></span><span>Priority is always given to contract clients.</span></li>
       </ul>
